[package]
name = "xlsx2md"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "xlsx2md_plugin"

[dependencies]
soi-sdk = { path = "../.." }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# NOTE: wasm-opt is strongly recommended for production builds to reduce .wasm size.
# Build with:  wasm-opt -Oz target/wasm32-unknown-unknown/release/xlsx2md_plugin.wasm \
#                  -o target/wasm32-unknown-unknown/release/xlsx2md_plugin.opt.wasm

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
